sprint15 final project refactor. code review2