@@ -74,49 +74,27 @@ public class BookingServiceImpl implements BookingService {
         bookingValidation.bookingStateValidation(bookingState);
         final LocalDateTime presentTime = LocalDateTime.now();
         log.info("Список бронирований успешно получен");
-        if (from == null || size == null) {
-            switch (bookingState) {
-                case "ALL":
-                    return toBookingDtoSortedByTime(bookingRepository.findAllByBookerId(bookerId));
-                case "FUTURE":
-                    return toBookingDtoSortedByTime(bookingRepository
-                            .findAllByBookerIdAndStartAfter(bookerId, presentTime));
-                case "PAST":
-                    return toBookingDtoSortedByTime(bookingRepository
-                            .findAllByBookerIdAndEndBefore(bookerId, presentTime));
-                case "CURRENT":
-                    return toBookingDtoSortedByTime(bookingRepository
-                            .findAllByBookerIdAndStartBeforeAndEndAfter(bookerId, presentTime, presentTime));
-                default:
-                    return toBookingDtoSortedByTime(bookingRepository.findAllByBookerId(bookerId)
-                            .stream()
-                            .filter(booking -> booking.getStatus().name().equals(bookingState))
-                            .collect(Collectors.toList()));
-            }
-        } else {
-            bookingValidation.fromAndSizeValidation(from, size);
-            int page = from / size;
-            switch (bookingState) {
-                case "ALL":
-                    return toBookingDtoSortedByTime(bookingRepository.findAllByBookerId(bookerId,
-                            PageRequest.of(page, size, Sort.by("start").descending())).toList());
-                case "FUTURE":
-                    return toBookingDtoSortedByTime(bookingRepository.findAllByBookerIdAndStartAfter(bookerId,
-                            presentTime, PageRequest.of(page, size, Sort.by("start").descending())).toList());
-                case "PAST":
-                    return toBookingDtoSortedByTime(bookingRepository.findAllByBookerIdAndEndBefore(bookerId,
-                            presentTime, PageRequest.of(page, size, Sort.by("start").descending())).toList());
-                case "CURRENT":
-                    return toBookingDtoSortedByTime(bookingRepository
-                            .findAllByBookerIdAndStartBeforeAndEndAfter(bookerId, presentTime, presentTime,
-                                    PageRequest.of(page, size, Sort.by("start").descending())).toList());
-                default:
-                    return toBookingDtoSortedByTime(bookingRepository.findAllByBookerId(bookerId,
-                                    PageRequest.of(page, size, Sort.by("start").descending()))
-                            .stream()
-                            .filter(booking -> booking.getStatus().name().equals(bookingState))
-                            .collect(Collectors.toList()));
-            }
+        int page = from / size;
+        switch (bookingState) {
+            case "ALL":
+                return toBookingDtoSortedByTime(bookingRepository.findAllByBookerId(bookerId,
+                        PageRequest.of(page, size, Sort.by("start").descending())).toList());
+            case "FUTURE":
+                return toBookingDtoSortedByTime(bookingRepository.findAllByBookerIdAndStartAfter(bookerId,
+                        presentTime, PageRequest.of(page, size, Sort.by("start").descending())).toList());
+            case "PAST":
+                return toBookingDtoSortedByTime(bookingRepository.findAllByBookerIdAndEndBefore(bookerId,
+                        presentTime, PageRequest.of(page, size, Sort.by("start").descending())).toList());
+            case "CURRENT":
+                return toBookingDtoSortedByTime(bookingRepository
+                        .findAllByBookerIdAndStartBeforeAndEndAfter(bookerId, presentTime, presentTime,
+                                PageRequest.of(page, size, Sort.by("start").descending())).toList());
+            default:
+                return toBookingDtoSortedByTime(bookingRepository.findAllByBookerId(bookerId,
+                                PageRequest.of(page, size, Sort.by("start").descending()))
+                        .stream()
+                        .filter(booking -> booking.getStatus().name().equals(bookingState))
+                        .collect(Collectors.toList()));
         }
     }
 
@@ -128,73 +106,40 @@ public class BookingServiceImpl implements BookingService {
         List<Long> itemsId = itemRepository.findAllIdByOwner(ownerId);
         bookingValidation.itemIdValidation(itemsId);
         log.info("Список бронирований успешно получен");
-        if (from == null || size == null) {
-            switch (bookingState) {
-                case "ALL":
-                    return toBookingDtoSortedByTime(bookingRepository.findAll()
-                            .stream()
-                            .filter(booking -> itemsId.contains(booking.getItemId()))
-                            .collect(Collectors.toList()));
-                case "FUTURE":
-                    return toBookingDtoSortedByTime(bookingRepository.findAllByStartAfter(presentTime)
-                            .stream()
-                            .filter(booking -> itemsId.contains(booking.getItemId()))
-                            .collect(Collectors.toList()));
-                case "PAST":
-                    return toBookingDtoSortedByTime(bookingRepository.findAllByEndBefore(presentTime)
-                            .stream()
-                            .filter(booking -> itemsId.contains(booking.getItemId()))
-                            .collect(Collectors.toList()));
-                case "CURRENT":
-                    return toBookingDtoSortedByTime(bookingRepository
-                            .findAllByStartBeforeAndEndAfter(presentTime, presentTime)
-                            .stream()
-                            .filter(booking -> itemsId.contains(booking.getItemId()))
-                            .collect(Collectors.toList()));
-                default:
-                    return toBookingDtoSortedByTime(bookingRepository.findAll()
-                            .stream()
-                            .filter(booking -> itemsId.contains(booking.getItemId()))
-                            .filter(booking -> booking.getStatus().name().equals(bookingState))
-                            .collect(Collectors.toList()));
-            }
-        } else {
-            bookingValidation.fromAndSizeValidation(from, size);
-            int page = from / size;
-            switch (bookingState) {
-                case "ALL":
-                    return toBookingDtoSortedByTime(bookingRepository
-                            .findAll(PageRequest.of(page, size, Sort.by("start").descending()))
-                            .stream()
-                            .filter(booking -> itemsId.contains(booking.getItemId()))
-                            .collect(Collectors.toList()));
-                case "FUTURE":
-                    return toBookingDtoSortedByTime(bookingRepository
-                            .findAllByStartAfter(presentTime, PageRequest.of(page, size, Sort.by("start").descending()))
-                            .stream()
-                            .filter(booking -> itemsId.contains(booking.getItemId()))
-                            .collect(Collectors.toList()));
-                case "PAST":
-                    return toBookingDtoSortedByTime(bookingRepository
-                            .findAllByEndBefore(presentTime, PageRequest.of(page, size, Sort.by("start").descending()))
-                            .stream()
-                            .filter(booking -> itemsId.contains(booking.getItemId()))
-                            .collect(Collectors.toList()));
-                case "CURRENT":
-                    return toBookingDtoSortedByTime(bookingRepository
-                            .findAllByStartBeforeAndEndAfter(presentTime, presentTime,
-                                    PageRequest.of(page, size, Sort.by("start").descending()))
-                            .stream()
-                            .filter(booking -> itemsId.contains(booking.getItemId()))
-                            .collect(Collectors.toList()));
-                default:
-                    return toBookingDtoSortedByTime(bookingRepository
-                            .findAll(PageRequest.of(page, size, Sort.by("start").descending()))
-                            .stream()
-                            .filter(booking -> itemsId.contains(booking.getItemId()))
-                            .filter(booking -> booking.getStatus().name().equals(bookingState))
-                            .collect(Collectors.toList()));
-            }
+        int page = from / size;
+        switch (bookingState) {
+            case "ALL":
+                return toBookingDtoSortedByTime(bookingRepository
+                        .findAll(PageRequest.of(page, size, Sort.by("start").descending()))
+                        .stream()
+                        .filter(booking -> itemsId.contains(booking.getItemId()))
+                        .collect(Collectors.toList()));
+            case "FUTURE":
+                return toBookingDtoSortedByTime(bookingRepository
+                        .findAllByStartAfter(presentTime, PageRequest.of(page, size, Sort.by("start").descending()))
+                        .stream()
+                        .filter(booking -> itemsId.contains(booking.getItemId()))
+                        .collect(Collectors.toList()));
+            case "PAST":
+                return toBookingDtoSortedByTime(bookingRepository
+                        .findAllByEndBefore(presentTime, PageRequest.of(page, size, Sort.by("start").descending()))
+                        .stream()
+                        .filter(booking -> itemsId.contains(booking.getItemId()))
+                        .collect(Collectors.toList()));
+            case "CURRENT":
+                return toBookingDtoSortedByTime(bookingRepository
+                        .findAllByStartBeforeAndEndAfter(presentTime, presentTime,
+                                PageRequest.of(page, size, Sort.by("start").descending()))
+                        .stream()
+                        .filter(booking -> itemsId.contains(booking.getItemId()))
+                        .collect(Collectors.toList()));
+            default:
+                return toBookingDtoSortedByTime(bookingRepository
+                        .findAll(PageRequest.of(page, size, Sort.by("start").descending()))
+                        .stream()
+                        .filter(booking -> itemsId.contains(booking.getItemId()))
+                        .filter(booking -> booking.getStatus().name().equals(bookingState))
+                        .collect(Collectors.toList()));
         }
     }
 
